# claude-code-orchestrator

./: .env.example  .gitignore  .mcp.json  .trivyignore  AGENT_SKILL_INTEGRATION.md  COMPATIBILITY.md  Dockerfile  FINAL-STATUS.md  FIXES-APPLIED.md  INIT-004-SUMMARY.md  INIT-007-SUMMARY.md  INIT-009-SUMMARY.md  LAUNCH-INSTRUCTIONS.md  README.md  STATUS-ASSESSMENT.md  TEST-THE-API.md  TEST_RESULTS.md  WAVE-4-WISHLIST.md  WAVE-5-WISHLIST.md  WAVES-5-7-PLAN.md  WISHLIST.md  claude-orch.sh  docker-compose.yml  main.py  mkdocs.yml  monitor-progress.sh  pyproject.toml  requirements.txt  test-ai-services-format.json  test-request.json
.claude/: COMMITMENT_MANIFEST.md  EXECUTION_SWARM_SYSTEM.md  HAIKU_EFFICIENCY_COMMITMENT.md  HELPER_TEMPLATES.md  HELPER_WORKER_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  MASTER_WORKER_SYSTEM.md  MIGRATION_GUIDE.md  MODEL_CONSENT_PROMPT.md  ORCH-001-violations-guide.md  PLANNER_WORKER_SYSTEM.md  QUICK_REFERENCE.md  README.md  SWARM_EXAMPLES.md  SWARM_QUICK_REFERENCE.md  launch-orch.py  master-prompt.md  orch-tools.ps1  orch-tools.py  watch-for.py  worker-daemon.py
.claude-project/: PROJECT.md  config.yaml
.claude-project/daily/: 2026-02-25.md
.claude/prompts/: haiku-init.txt  opus-sonnet-init.txt
.claude/skills/claude-api-cli/: README.md  SKILL.md  command-reference.md  skill.json
.github/workflows/: ci.yml  deploy-staging.yml  docker.yml
Daily/: 2026-02-16.md
EFFORT-Agent-Discovery-Phase-1/: EFFORT.md  PLAN-Phase-1-2026-01-31-114500.md
EFFORT-Agent-Discovery-Phase-2/: EFFORT.md
EFFORT-Agent-Discovery-Phase-3/: EFFORT.md
EFFORT-Agent-Discovery-Phase-4/: EFFORT.md
EFFORT-Agent-Discovery-Phase-5/: EFFORT.md
EFFORT-Agent-Skill-Integration/: EFFORT.md
EFFORT-Agentic-API-Architecture/: EFFORT.md  PLAN-Agentic-Implementation-2026-01-30T18-43-51Z.md  README.md  architectural-analysis.md  implementation-plan.md  security-considerations.md  use-cases.md
EFFORT-BUILD-SERVICE/: EFFORT.md  summary.md
EFFORT-CLI/: EFFORT.md  PLAN-CLI-2026-01-31-031714.md  STATUS.md  WISHLIST.md
EFFORT-Compatibility-Adapter/: EFFORT.md
EFFORT-Latency-Optimization/: EFFORT.md
EFFORT-MCP-Tool-Routing/: EFFORT.md  PLAN-2026-02-16-mcp-tool-routing.md
EFFORT-Production-Hardening/: 2026-02-16-production-hardening.md  EFFORT.md
Mac/: Install-Prerequisites.command  Install.command  START-HERE.command
cli/: README.md  __init__.py  api_client.py  claude_api.py  config.py  utils.py
cli/commands/: batch.py  discovery.py  health.py  keys.py  process.py  providers.py  route.py  service.py  tasks.py  test.py  usage.py  workers.py
client/: QUICKSTART.md  README.md  __init__.py  claude_client.py  pyproject.toml
client/claude_code_client/: __init__.py  async_client.py  client.py  exceptions.py  models.py
client/examples/: agentic_task.py  async_example.py  simple_completion.py  streaming.py
client/tests/: test_async_client.py  test_client.py  test_models.py
docker/: Dockerfile.sandbox
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  CLIENT_LIBRARY.md  DEPLOYMENT.md  GETTING_STARTED.md  INIT-010-SUMMARY.md  WEBSOCKET.md  WEBSOCKET_QUICKSTART.md  index.md  quickstart.md  redis-cache.md
docs/api-reference/: agentic-tasks.md  authentication.md  completions.md  websocket.md
docs/client-libraries/: python.md
docs/deployment/: docker-compose.md  monitoring.md  production.md
docs/examples/: code-analysis.md  documentation-generation.md  multi-agent-workflow.md  test-generation.md
docs/guides/: agentic-api-guide.md  error-handling.md  execution-paths.md  getting-started.md  permission-model.md  security-best-practices.md
examples/: api_usage.py  auth_example.py  batch_processor.py  client_usage.py  code_analyzer.py  simple_chatbot.py  simple_client_example.py  token_tracker_usage.py  websocket_client.py
site/: 404.html  index.html
site/API_REFERENCE/: index.html
site/ARCHITECTURE/: index.html
site/AUTHENTICATION/: index.html
site/CLIENT_LIBRARY/: index.html
site/DEPLOYMENT/: index.html
site/DEPLOYMENT/docker-compose/: index.html
site/DEPLOYMENT/monitoring/: index.html
site/DEPLOYMENT/production/: index.html
site/GETTING_STARTED/: index.html
site/INIT-010-SUMMARY/: index.html
site/WEBSOCKET/: index.html
site/WEBSOCKET_QUICKSTART/: index.html
site/api-reference/agentic-tasks/: index.html
site/quickstart/: index.html
site/redis-cache/: index.html
site/search/: search_index.json
src/: README_TOKEN_TRACKER.md  agent_discovery.py  agentic_executor.py  api.py  audit_logger.py  auth.py  budget_manager.py  cache.py  compatibility_adapter.py  direct_completion.py  logging_config.py  middleware.py  model_router.py  permission_manager.py  sandbox_manager.py  security_validator.py  settings.py  token_tracker.py  websocket.py  worker_pool.py
tests/: __init__.py  conftest.py  test_agent_discovery.py  test_agentic_api_integration.py  test_agentic_executor.py  test_api.py  test_audit_logging.py  test_auth.py  test_basic.py  test_budget_manager.py  test_cache.py  test_client.py  test_model_router.py  test_permissions.py  test_sandbox.py  test_security_validator.py  test_token_tracker.py  test_websocket.py  test_worker_pool.py
(+13 files in other folders)
