[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.tox
  | dist
  | build
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

# Enable pycodestyle (`E`, `W`), Pyflakes (`F`), isort (`I`),
# pep8-naming (`N`), pyupgrade (`UP`), flake8-bugbear (`B`),
# flake8-comprehensions (`C4`), and flake8-simplify (`SIM`)
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]

# Ignore line length (handled by black)
ignore = ["E501"]

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "venv",
    ".eggs",
    ".tox",
    "dist",
    "build",
    "__pycache__",
]

[tool.ruff.per-file-ignores]
# Test files can use assert statements and have longer functions
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
# Already defined in pytest.ini, but included here for completeness
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "cli", "cli.commands", "client"]

[project]
name = "claude-code-api-service"
version = "0.1.0"
description = "API wrapper around Claude Code CLI for rapid prototyping"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "anthropic>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-api = "cli.claude_api:app"
