[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.tox
  | dist
  | build
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "venv",
    ".eggs",
    ".tox",
    "dist",
    "build",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line length (handled by black)
    "E402",   # Module-level import not at top — many late imports by design
    "B904",   # raise-from in except — would touch 50+ sites, low value
    "B008",   # Function call in default arg — FastAPI Depends/Security pattern
    "N814",   # CamelCase imported as constant — local alias pattern
    "B905",   # zip strict — Python 3.9 compat
    "SIM105", # contextlib.suppress — style preference, not a bug
    "SIM115", # context manager for open — intentional for subprocess fd lifetime
    "UP006",  # Use dict instead of Dict — keep for Python 3.9 compat
    "UP007",  # Use X | Y — requires Python 3.10+
    "UP035",  # typing.Dict deprecated — keep for Python 3.9 compat
    "UP042",  # StrEnum — requires Python 3.11 minimum
    "UP045",  # Use X | None — requires Python 3.10+
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "F841", "F811"]

[tool.pytest.ini_options]
# Already defined in pytest.ini, but included here for completeness
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "cli", "cli.commands", "client"]

[project]
name = "claude-code-api-service"
version = "0.1.0"
description = "API wrapper around Claude Code CLI for rapid prototyping"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "anthropic>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-api = "cli.claude_api:app"
