[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-client"
version = "0.1.0"
description = "Python client for Claude Code API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Claude Code", email = "support@example.com"}
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=11.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/claude-code-client"
Documentation = "https://claude-code-client.readthedocs.io"
